test/cases/compile_errors/issue_25581_value_as_inline_fn_return_type.zig
inline fn a() null {
    return null;
}

pub fn main() void {
    _ = a();
}

// error
//
// :1:15: error: expected type 'type', found '@TypeOf(null)'
